k8s/coverage/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coverage
  name: coverage
  namespace: csd
spec:
  ports:
  - name: http-app
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: coverage
  type: ClusterIP
status:
  loadBalancer: {}
