k8s/coverage/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: coverage
  namespace: csd
spec:
  host: coverage
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
