k8s/coverage/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coverage
spec:
  hosts:
  - coverage
  http:
  - route:
    - destination:
        host: coverage
        subset: v1
      weight: 100
    # - destination:
    #     host: coverage
    #     subset: v2
    #   weight: 100
    #timeout: 1s
